@@ -6,6 +6,11 @@ This file contains SPOILERS, which might ruin your IVAN experience totally. The 
 is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
+
+March 27 2003 Timo Kiviluoto <sonor@phpoint.fi>
+
+	* The slave is now better and his picture changes due to armor like the player's
+
 March 27 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
 	* Unicorn sometimes teleport when they take hits (so that killing them when invisible isn't too easy)
